grpc/basic_grpc_with_load_balancer/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Creates an EC2 Instance

Parameters:

  EC2InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.medium

  ToolsServerImageId:
    Description: EC2 instance type
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-ebs

  EC2Startup:
    Description: EC2 Instance Start - Set to 1 when EC2 Instance is needed
    Type: Number
    Default: 1

  EC2KeyName:
    Description: EC2 Pem Key Name
    Type: String
    Default: cloudavail-key

  SSLCertificateARN:
    Description: SSLCertificateARN
    Type: String
    Default: arn:aws:acm:us-east-1:187376578462:certificate/350d1c92-80af-4fc0-a854-14f74a00f784

Mappings: {}

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  PublicInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicInternetRouteTable

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicInternetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicInternetRouteTable
      SubnetId: !Ref PublicSubnet01

  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 Instance Security Group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 50051
        ToPort: 50051
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress: []
      VpcId: !Ref VPC

  EC2InstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        IamInstanceProfile:
          Arn: !GetAtt EC2InstanceInstanceProfile.Arn
        ImageId: !Ref ToolsServerImageId
        InstanceType: !Ref EC2InstanceType
        KeyName: !Ref EC2KeyName
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            Groups: [ !GetAtt EC2InstanceSecurityGroup.GroupId ]
        UserData:
          Fn::Base64: |
            #!/bin/bash
            # install byobu - allows multi-window management for terminal
            yum -y get-update
            amazon-linux-extras install -y epel
            yum -y install byobu

  EC2InstanceAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: !Ref EC2Startup
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2InstanceLaunchTemplate
        Version: !GetAtt EC2InstanceLaunchTemplate.LatestVersionNumber
      MaxSize: !Ref EC2Startup
      MinSize: !Ref EC2Startup
      TargetGroupARNs:
        - !Ref EC2InstanceTargetGroup
      VPCZoneIdentifier:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-asg
          PropagateAtLaunch: true

  EC2InstanceInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - Ref: EC2InstanceIAMRole

  EC2InstanceIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess

  ALBLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBLoadBalancerSecurityGroup
      Subnets:
        - !Ref PublicSubnet01
        - !Ref PublicSubnet02
      Type: application

  ALBLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALBLoadBalancer Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 50051
        ToPort: 50051
        CidrIp: 0.0.0.0/0

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      CidrBlock: 10.0.0.0/25
      VpcId: !Ref VPC

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      CidrBlock: 10.0.0.128/25
      VpcId: !Ref VPC

  ALBHTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Certificates:
        - CertificateArn: !Ref SSLCertificateARN
      LoadBalancerArn: !Ref ALBLoadBalancer
      Protocol: HTTPS
      Port: 50051
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref EC2InstanceTargetGroup

  EC2InstanceTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 50051
      Protocol: HTTP
      HealthCheckPath: /
      ProtocolVersion: GRPC
      TargetType: instance
      VpcId: !Ref VPC

  grpcCloudAvailRecordSet:
    Properties:
      AliasTarget:
        DNSName: !GetAtt ALBLoadBalancer.DNSName
        HostedZoneId: !GetAtt ALBLoadBalancer.CanonicalHostedZoneID
      HostedZoneId: Z1X80I6XVZF6F8
      Name: grpc.cloudavail.com.
      Type: A
    Type: AWS::Route53::RecordSet
